--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
