--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "start-heroku": "next starti -p $PORT",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
