heroku likes port, now doesnt, hopefully both are happy now with Procfile that overrides start command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "start-heroku": "next starti -p $PORT",
+    "start-heroku": "next start -p $PORT",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
